--- a/Время выполнения скриптов/index.html
+++ b/Время выполнения скриптов/index.html
@@ -9,8 +9,8 @@
     <body>
         
         <button class="btn">Animate</button>
+        <div class="bro"></div>
         <div class="box"></div>
-
         <div class = "btn-block">
             <button class="first"></button>
             <button></button>
